# SuperiorMySqlpp

./: .travis.yml  CMakeLists.txt  libsuperiormysqlpp.pc.in
src/: CMakeLists.txt  SuperiorMySqlppConfig.cmake.in
tests/: CMakeLists.txt  runtest.sh
tests/extended/: CMakeLists.txt
tests/odr/: CMakeLists.txt
